Refactoring architetturale: Facade/Service/Mapper/DTO unificati
Principali modifiche:
- User.getFullName() aggiunto; rimosso profilePictureUrl
- Booking: rimossi professional/status/meetingLink/reminderSent (ora su Slot)
- DocumentType.MEDICAL_CERT rimosso dall'enum
- Nuove interfacce Facade (AdminFacade, UserFacade, ecc.); I-prefixed diventano alias @Deprecated
- DTO unificati: UserResponse e SubscriptionResponse sostituiscono i DTO precedenti
- Nuovi mapper dedicati: SlotMapper, ReviewMapper, DocumentMapper, PlanMapper
- SubscriptionMapper: aggiunto toResponse(), refactoring con buildSubscription()
- UserMapper: aggiunto toAdminResponse()
- FacadeMapper: deprecato e svuotato
- ReviewServiceImpl e SlotServiceImpl usano i nuovi mapper iniettati
- SubscriptionServiceImpl usa SubscriptionMapper
- data.sql espanso: 15+ clienti, 40+ slot, 20+ prenotazioni, 12+ recensioni, 14+ documenti
- Test aggiornati per le nuove firme e i mapper iniettati

https://claude.ai/code/session_01TKZP1vkJjMg6gKeUWfh8VQ